cmake_minimum_required(VERSION 3.26)
project(Test)

set(CMAKE_CXX_STANDARD 17)

add_executable(Test lab3_main_stack.cpp
        fruit_sale.cpp
        fruit_sale.h
        person.h
        notes_classes.cpp
        notes_dynamic_memory_heap.cpp
        notes_big_three_example.cpp
        notes_big_three.cpp
        notes_templates.cpp
        notes_operator_overloading.cpp
        lab3_original_code.cpp
        lab3_testing_code.cpp
        lab3_main_stack.cpp
        lab3_main_queue.cpp
        ABS.h
        ABQ.h
        notes_const_keyword.cpp
        notes_file_io.cpp
        notes_linked_lists.cpp
        notes_linked_list_operations.cpp
        notes_binary_file_io.cpp
        notes_reading_writing_files.cpp
        demo_binary_io.cpp
        personn.h
        project_1.cpp
        notes_pointers.cpp
        project_1_testing.cpp
        saved.h
        midterm_review.cpp
        notes_serialization.cpp
        "Lab 4 - Binary File Input:Output/extrafile.cpp"
        "Lab 4 - Binary File Input:Output/extrafile.h"
        "Lab 4 - Binary File Input:Output/main.cpp"
)
